--- a/p22event/index.html
+++ b/p22event/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event</title>
     <link href="assets/css/main.css" media="screen, projection" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
     <div class="details-wrapper">
         <div class="details-container">
@@ -19,39 +21,71 @@
             <div class="details-body">
                 <div class="details-body-item">
                     <div class="details-body-item-head">
-						Description
-						<i class="material-icons">keyboard_arrow_down</i>
-					</div>
+                        Description
+                        <i class="material-icons">keyboard_arrow_down</i>
+                    </div>
                     <div class="details-body-item-content" id="description-content">
-					</div>
+                    </div>
                 </div>
                 <div class="details-body-item">
                     <div class="details-body-item-head">
-						Format
-						<i class="material-icons">keyboard_arrow_right</i>
-					</div>
+                        Format
+                        <i class="material-icons">keyboard_arrow_right</i>
+                    </div>
                     <div class="details-body-item-content hidden" id="format-content">
-					</div>
+                    </div>
                 </div>
                 <div class="details-body-item">
                     <div class="details-body-item-head">
-						Rules
-						<i class="material-icons">keyboard_arrow_right</i>
-					</div>
+                        Rules
+                        <i class="material-icons">keyboard_arrow_right</i>
+                    </div>
                     <div class="details-body-item-content hidden" id="rules-content">
-					</div>
+                    </div>
                 </div>
                 <div class="details-body-item">
                     <div class="details-body-item-head">
-						Resources
-						<i class="material-icons">keyboard_arrow_right</i>
-					</div>
+                        Resources
+                        <i class="material-icons">keyboard_arrow_right</i>
+                    </div>
                     <div class="details-body-item-content hidden" id="resources-content">
-					</div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    { cluster: "Bytehoc's",
+    startName: "Web",
+    endName: "Wars",
+    description: `descp Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis sed autem id asperiores
+    voluptatem, enim cumque at libero odio iste molestias, quae quis pariatur perferendis suscipit aliquid illo facere
+    reiciendis?`, format: `format Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim laudantium ex, est,
+    saepe placeat soluta magnam nesciunt similique eveniet explicabo tenetur repudiandae animi illum ab? Fuga recusandae
+    in nobis ipsa deleniti aliquam iste! Quae, voluptatem? Reiciendis vel doloribus id qui.`, rules: `rules Lorem ipsum
+    dolor sit amet consectetur, adipisicing elit. Exercitationem asperiores aliquid tempora cumque quaerat. Harum qui,
+    fugiat perspiciatis soluta quos architecto aperiam at debitis esse aspernatur necessitatibus quod quaerat cupiditate
+    aliquid blanditiis maxime error! Sunt inventore dolor ut repudiandae perspiciatis!`, resources: `resources Lorem
+    ipsum dolor, sit amet consectetur adipisicing elit. Maiores fugit aliquam laborum nemo modi quae, veritatis error
+    numquam earum nihil commodi, saepe qui natus harum esse dolorum cupiditate veniam consequuntur quam rerum
+    voluptatibus ab corrupti? Dolore obcaecati sed corrupti ipsum.`, };
+    <div id="cluste-name">Bytehoc</div>
+    <div id="event-name">Web</div>
+    <div id="event-bold">Wars</div>
+    <div id="event-img">webWars.png</div>
+    <div id="event-descp">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia possimus dicta qui ullam
+        fugit eligendi quo similique libero commodi aliquam, a sit ea laudantium accusamus autem omnis? Illum, quisquam
+        sed.</div>
+    <div id="event-rules">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia possimus dicta qui ullam
+        fugit eligendi quo similique libero commodi aliquam, a sit ea laudantium accusamus autem omnis? Illum, quisquam
+        sed.</div>
+    <div id="event-format">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia possimus dicta qui ullam
+        fugit eligendi quo similique libero commodi aliquam, a sit ea laudantium accusamus autem omnis? Illum, quisquam
+        sed.</div>
+    <div id="event-resources">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia possimus dicta qui
+        ullam fugit eligendi quo similique libero commodi aliquam, a sit ea laudantium accusamus autem omnis? Illum,
+        quisquam sed.</div>
+
     <script src="assets/scripts/main.js"></script>
 </body>
+
 </html>
