feat: general info in list page

--- a/p22event/index.html
+++ b/p22event/index.html
@@ -51,6 +51,159 @@
                     <div class="details-body-item-content hidden" id="resources-content">
                     </div>
                 </div>
+                <div id="list-name">
+                    Events
+                </div>
+
+
+                <div id="list-data">
+
+                    <link href="/21/cms/templates/common/response/assets/css/main.css" rel="stylesheet" type="text/css">
+                    <p dir="ltr">The world came to a standstill as a historic pandemic put a halt to our plans. But that
+                        did not stop us; we at Pragyan took our initiatives virtual and conducted various successful
+                        events. Here’s what we’ve been up to:<br>
+                    </p>
+
+                    <ul>
+                        <li dir="ltr">
+                            <p dir="ltr"><u>GyaanE</u></p>
+                        </li>
+                    </ul>
+
+                    <blockquote>
+                        <p>"The only ones among you who will be really happy are those who will have sought and found
+                            how to serve."</p>
+
+                        <p dir="ltr">–Albert Schweitzer</p>
+                    </blockquote>
+
+                    <p dir="ltr">In order to give back to our community, the social responsibility wing of Pragyan
+                        conducted ‘GyaanE’, an interactive virtual event to engage with the young teenage minds of SOS
+                        Children’s Village, Bhopal. The session served to be extremely fruitful for the students, filled
+                        with exciting activities and motivational lectures. The event was wrapped up with a valuable
+                        career guidance session.</p>
+
+                    <p dir="ltr" style="display:flex; justify-content: space-around;"><img
+                            src="https://pragyan.org/21/home/initiatives/3.jpg"
+                            style="display:inline-block; max-width:100%; width:400px"><img
+                            src="https://pragyan.org/21/home/initiatives/4.jpg"
+                            style="display:inline-block; max-width:100%; width:400px"></p>
+
+                    <p></p>
+
+                    <ul>
+                        <li dir="ltr">
+                            <p dir="ltr"><u>Pragati</u></p>
+                        </li>
+                    </ul>
+
+                    <p dir="ltr">The JEE Mains lays the foundation of success for most aspiring engineers and architects
+                        in India. Hence, to lend a helping hand to our nation’s future builders, Pragyan in association
+                        with Mindlake Analytics conducted ‘Pragati’, a free full-length mock JEE Main exam. Experienced
+                        evaluators then assessed their answers and provided each student with a detailed analysis of
+                        their results.</p>
+
+                    <p></p>
+
+                    <ul>
+                        <li dir="ltr">
+                            <p dir="ltr"><u>Career Compass</u></p>
+                        </li>
+                    </ul>
+
+                    <p dir="ltr">Choosing a suitable career from a world of opportunities can seem like a daunting task,
+                        even as a college student. To help out students who had to make this difficult decision, Pragyan
+                        ‘21 conducted Career Compass, a free day-long career guidance event. Participants were given the
+                        opportunity to take a psychometric test and were provided with a detailed analysis and
+                        instructions on how to perceive the results on the very same day.</p>
+
+                    <p></p>
+
+                    <ul>
+                        <li dir="ltr">
+                            <p dir="ltr"><u>iCitizen</u></p>
+                        </li>
+                    </ul>
+
+                    <p dir="ltr">Making an uninformed or misinformed decision can be more dangerous than you might
+                        expect. We at Pragyan know how important it is to stay up to date on your rights and services.
+                        To make this easier for you, Pragyan introduced iCitizen, an initiative taken in an effort to
+                        bring to you essential knowledge and information on various government and other crucial
+                        services.</p>
+
+                    <p dir="ltr" style="display:flex; justify-content: space-around;"><a
+                            href="https://www.instagram.com/p/CLjq_cKl45w/"><img
+                                src="https://pragyan.org/21/home/initiatives/Analysis1.jpg"
+                                style="display:inline-block; max-width:100%; width:400px"></a><a
+                            href="https://www.instagram.com/p/CLzEzLsla71/"><img
+                                src="https://pragyan.org/21/home/initiatives/Cover.jpg"
+                                style="display:inline-block; max-width:100%; width:400px"></a></p>
+
+                    <p></p>
+
+                    <ul>
+                        <li dir="ltr">
+                            <p dir="ltr"><u>Young Techie</u></p>
+                        </li>
+                    </ul>
+
+                    <p dir="ltr">Pragyan conducted the second edition of Young Techie. All students from class VIII to
+                        class XII were invited to submit their project abstract in approximately 200 words. The
+                        finalists were decided based on the quality of the entries received, and they also availed the
+                        opportunity to attend a four-week long project development program, under the mentorship of the
+                        technical clubs of NIT Trichy.</p>
+
+                    <p dir="ltr">The themes for the projects were:</p>
+
+                    <ul>
+                        <li dir="ltr">
+                            <p dir="ltr">Data Science</p>
+                        </li>
+                        <li dir="ltr">
+                            <p dir="ltr">Automotive Industry</p>
+                        </li>
+                        <li dir="ltr">
+                            <p dir="ltr">Robotics</p>
+                        </li>
+                        <li dir="ltr">
+                            <p dir="ltr">Disaster Management</p>
+                        </li>
+                        <li dir="ltr">
+                            <p dir="ltr">Mathematics</p>
+                        </li>
+                        <li dir="ltr">
+                            <p dir="ltr">Entrepreneurship and Management</p>
+                        </li>
+                    </ul>
+
+                    <p dir="ltr"></p>
+
+                    <ul>
+                        <li dir="ltr">
+                            <p dir="ltr"><u>Inspir-It</u></p>
+                        </li>
+                    </ul>
+
+                    <p dir="ltr">Pragyan, in-collaboration with All the Children, took an initiative Inspir-It on the
+                        28th of March. It was a cluster of events for students from classes 6 to 9 aimed at how gaining
+                        knowledge on the issues of today, skills enhancement and giving back to the community go
+                        hand-in-hand.<br>
+                        All the proceeds from this event would be forwarded to improving the lives of those less
+                        fortunate than we are.</p>
+
+                    <p dir="ltr" style="display:flex; justify-content: space-around;"><a
+                            href="https://www.instagram.com/p/CLjq_cKl45w/"><img
+                                src="https://pragyan.org/21/home/initiatives/inspi1.png"
+                                style="display:inline-block; max-width:100%; width:400px"></a><a
+                            href="https://www.instagram.com/p/CLzEzLsla71/"><img
+                                src="https://pragyan.org/21/home/initiatives/inspi2.png"
+                                style="display:inline-block; max-width:100%; width:400px"></a></p>
+
+                    <p dir="ltr"></p>
+
+                    <p dir="ltr"></p>
+
+</div>
             </div>
         </div>
     </div>
